# gfagraphs

./: .gitignore  .readthedocs.yml  README.md  __namespace__.py  justfile  pyproject.toml  requirements.txt  setup.py  test_pggraphs.py
.github/workflows/: python-app.yml
docs/: abstractions.rst  conf.py  gfaparser.rst  graph.rst  index.rst  network.rst  networkx.rst  nx.rst  requirements.txt
gfabstract/: README.md  bqase.py
gfagraphs/: __init__.py  gfagraphs.py
gfatypes/: __init__.py  gfatypes.py
pgGraphs/: __init__.py  abstractions.py  gfaparser.py  graph.py  io.py  networkx.py  nx.py
