[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gfagraphs"
version = "0.1.73"
authors = [
  { name="Tharos", email="dubois.siegfried@gmail.com" },
]
description = "Package that packs some utility functions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Tharos-ux/gfatypes"
"Bug Tracker" = "https://github.com/Tharos-ux/gfatypes/issues"