[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "gfagraphs"
    version = "0.2.2"
    authors = [
    { name="Siegfried Dubois", email="siegfried.dubois@inria.fr" },
    ]
    description = "Library to parse, edit and handle in memory GFA graphs"
    readme = "README.md"
    requires-python = ">=3.10"
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]

    [project.urls]
    "Homepage" = "https://github.com/Tharos-ux/gfagraphs"
    "Bug Tracker" = "https://github.com/Tharos-ux/gfagraphs/issues"
    